২৮.৪ - কাস্টোমাইজারে ইউজারকে আইকনের কালার এবং নাম্বার অব রো সিলেক্ট করতে দেয়া
২৮.৪ - কাস্টোমাইজারে ইউজারকে আইকনের কালার এবং নাম্বার অব রো সিলেক্ট করতে দেয়া

--- a/app/public/wp-content/themes/customizer/assets/css/style.css
+++ b/app/public/wp-content/themes/customizer/assets/css/style.css
@@ -265,9 +265,12 @@ body {
     left: 0;
     top: 0;
     height: 100%;
-    color: #22bbc0;
-    font-size: 30px;
     text-align: center;
+}
+
+.service-icon i{    
+    color: #22bbc0;
+    font-size: 50px;
 }
 
 .single-service-item h3 {
